--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
-  "name"         : "mean-hello-world",
-  "version"      : "0.0.1",
-  "description"  : "Hello World Example Application on the MEAN stack for Digital Garage",
-  "main"         : "server.js",
-  "author"       : "John McCawley",
-  "dependencies" : {
-    "body-parser"    : "^1.4.3",
-    "express"        : "^4.13.4",
-    "mongoose"       : "^4.4.12",
-    "morgan"         : "^1.1.1"
-  },
-  "scripts": {
-    "start": "node server.js"
-  }
+    "name": "mean-hello-world",
+    "version": "0.0.1",
+    "description": "Hello World Example Application on the MEAN stack for Digital Garage",
+    "main": "server.js",
+    "dependencies": {
+        "body-parser": "^1.4.3",
+        "express": "^4.13.4",
+        "mongoose": "^4.4.12",
+        "morgan": "^1.1.1",
+        "mocha": "^2.4.5",
+        "chai": "^3.5.0",
+        "chai-http": "^2.0.1"
+    },
+    "engine": {
+        "node": "*",
+        "npm": "*"
+    },
+    "scripts": {
+        "start": "node server.js",
+        "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "http://github.com/thedigitalgarage/mean-ex.git"
+    },
+    "author": "John McCawley <john.mccawley@thedigitalgarage.io>",
+    "license": "CC-BY-1.0",
+    "bugs": {
+        "url": "http://github.com/thedigitalgarage/mean-ex/issues"
+    },
+    "homepage": "http://github.com/thedigitalgarage/mean-ex-ex"
 }
